--- a/perch/core/lang/en-gb.txt
+++ b/perch/core/lang/en-gb.txt
@@ -464,5 +464,18 @@
     "Template tag ID \u2018%s\u2019 contains disallowed characters": "Template tag ID \u2018%s\u2019 contains disallowed characters",
     "Markdown formatting": "Markdown formatting",
     "The template for this region (%s) cannot be found.": "The template for this region (%s) cannot be found.",
-    "Admin": "Admin"
+    "Admin": "Admin",
+    "Reset your password": "Reset your password",
+    "If you have forgotten your password, enter your email address and you will be sent a recovery link.": "If you have forgotten your password, enter your email address and you will be sent a recovery link.",
+    "Your passwords must match and meet complexity requirements.": "Your passwords must match and meet complexity requirements.",
+    "Editing My Account": "Editing My Account",
+    "Change password": "Change password",
+    "New password": "New password",
+    "Repeat new password": "Repeat new password",
+    "Add User": "Add User",
+    "Adding a New User Account": "Adding a New User Account",
+    "Repeat the password": "Repeat the password",
+    "Send welcome email": "Send welcome email",
+    "Create user": "Create user",
+    "User successfully created.": "User successfully created."
 }
