--- a/perch/core/lang/en-gb.txt
+++ b/perch/core/lang/en-gb.txt
@@ -469,5 +469,31 @@
     "If you have forgotten your password, enter your email address and you will be sent a recovery link.": "If you have forgotten your password, enter your email address and you will be sent a recovery link.",
     "Thank you. Now check your email for the link.": "Thank you. Now check your email for the link.",
     "If you do not receive an email, look in your spam folder and also check that the email address you have used is the one we have for you.": "If you do not receive an email, look in your spam folder and also check that the email address you have used is the one we have for you.",
-    "%sLog in%s %sTry again%s": "%sLog in%s %sTry again%s"
+    "%sLog in%s %sTry again%s": "%sLog in%s %sTry again%s",
+    "Subpage folder": "Subpage folder",
+    "New pages should": "New pages should",
+    "Reference this master page": "Reference this master page",
+    "Copy this master page": "Copy this master page",
+    "Sorry, there's currently no content available based on that filter": "Sorry, there's currently no content available based on that filter",
+    "View all": "View all",
+    "Move the page to this location": "Move the page to this location",
+    "File name": "File name",
+    "Page already exists, or is a link only": "Page already exists, or is a link only",
+    "This page will have more pages below it": "This page will have more pages below it",
+    "To configure tasks to run, you first need to set a %ssecret%s. This is just a code word to stop tasks being run accidentally. Choose a secret (e.g. %scarbonara%s) and add it to your %sconfig\/config.php%s file like this:": "To configure tasks to run, you first need to set a %ssecret%s. This is just a code word to stop tasks being run accidentally. Choose a secret (e.g. %scarbonara%s) and add it to your %sconfig\/config.php%s file like this:",
+    "Do that now, then reload this page. Don't use %scarbonara%s.": "Do that now, then reload this page. Don't use %scarbonara%s.",
+    "Republish Pages": "Republish Pages",
+    "Republishing pages": "Republishing pages",
+    "Are you sure you wish to republish all pages?": "Are you sure you wish to republish all pages?",
+    "Republishing is under way.": "Republishing is under way.",
+    "Republishing: %s on page %s": "Republishing: %s on page %s",
+    "Republishing completed successfully": "Republishing completed successfully",
+    "Add User": "Add User",
+    "Adding a New User Account": "Adding a New User Account",
+    "Repeat the password": "Repeat the password",
+    "Send welcome email": "Send welcome email",
+    "Create user": "Create user",
+    "Your passwords must match and meet complexity requirements.": "Your passwords must match and meet complexity requirements.",
+    "User successfully created.": "User successfully created.",
+    "Edit page locations": "Edit page locations"
 }
